--- a/src/app/components/videos-list/videos-list.component.html
+++ b/src/app/components/videos-list/videos-list.component.html
@@ -1,12 +1,16 @@
-<table class="u-full-width">
-    <tbody>
-      <tr *ngFor="let video of videos">
-        <td style="cursor: pointer;" (click)="selectedVideoId = video.id">
-            <a >{{ video.name }}</a>
-        </td>
-        <td><button class="button-primary" (click)="deleteVideo(video.id)">Delete</button></td>
-      </tr>
-    </tbody>
-  </table>
+<div *ngIf="!videos.length && !isLoading" class="center warning-msg">
+    No videos yet
+</div>
+
+<table *ngIf="!isLoading" class="u-full-width">
+  <tbody>
+    <tr *ngFor="let video of videos">
+      <td style="cursor: pointer;" (click)="selectedVideoId = video.id">
+        <a>{{ video.name }}</a>
+      </td>
+      <td><button class="button-primary" (click)="deleteVideo(video.id)">Delete</button></td>
+    </tr>
+  </tbody>
+</table>
 
 <app-video *ngIf="selectedVideoId" [videoId]="selectedVideoId"></app-video>
