--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.warning-msg {
+    margin-top: 2em;
+    text-align: center;
+    border: 2px solid rgba(255, 69, 0, .7);
+    background-color: rgba(255, 69, 0, .1);
+}
